<resources>
    <string name="app_name">MyWhatsApp</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_code">Enter Code</string>
    <string name="welcome_to_the_dashboard">Welcome to the Dashboard</string>
    <string name="logout">Logout</string>
    <string name="enter_your_phone_no">Enter Your Phone No.</string>
    <string name="phone_number">Phone Number</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="otp">OTP</string>
    <string name="verify_otp">Verify OTP</string>
</resources>