<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:layout_margin="10dp">
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_phone_no"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/text"
        android:autofillHints="" />
    <Button
        android:id="@+id/buttonGenerateOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"
        android:layout_marginBottom="20dp"
        android:text="@string/generate_otp"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/otp"
        android:inputType="number"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/buttonGenerateOTP"
        android:autofillHints="" />
    <Button
        android:id="@+id/buttonVerifyOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otp"
        android:layout_marginBottom="20dp"
        android:text="@string/verify_otp"
        android:textSize="20sp"
        android:enabled="false"/>
    <ProgressBar
        android:id="@+id/bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonVerifyOTP"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>
</RelativeLayout>
<!--    android:hint="@string/enter_phone_number"-->
<!--    android:hint="@string/enter_code"-->